# ice-cream-dataops

./: pyproject.toml
build.0kxndtr4.tmp/extraction_pipelines/: 1.ep_icapi_assets.yaml  2.ep_icapi_datapoints.yaml
build.0kxndtr4.tmp/functions/icapi_datapoints_extractor/: extractor_config.yaml
build.0kxndtr4.tmp/functions/icapi_timeseries_extractor/: extractor_config.yaml
build.1dg_2jsr.tmp/data_sets/: 1.data_sets.yaml
build.szvheuhu.tmp/: _build_environment.yaml
build.szvheuhu.tmp/auth/: 1.icapi_extractors.yaml
build.szvheuhu.tmp/functions/: 1.functions.yaml
build.szvheuhu.tmp/functions/icapi_datapoints_extractor/: schedules.yaml
ice-cream-dataops/: config.dev.yaml
ice-cream-dataops/.venv.icapi_assets_extractor/: pyvenv.cfg
ice-cream-dataops/modules/data_foundation/auth/: data_developer.yaml
ice-cream-dataops/modules/ice_cream_api/auth/: icapi_extractors.yaml
ice-cream-dataops/modules/ice_cream_api/functions/icapi_datapoints_extractor/: schedules.yaml
ice-cream-dataops/modules/ice_cream_api/transformations/: create_asset_hierarchy.sql  create_asset_hierarchy.yaml  icapi_ts_assets_contextualization.yaml
ice-cream-dataops/modules/uc_oee/auth/: gp_data_pipeline_oee.yaml
