[tool.poetry]
name = "ice-cream-dataops"
version = "0.1.0"
description = "Bootcamp files"
authors = ["Your Name <you@example.com>"]
license = "-"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cognite-toolkit = "^0.2.20"
retry = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
